# DFC-transceiver

./: .gitignore  README.md  SDDC_FX3.img  cyfxgpiftousbmulti.img  dfc.c  fvtest-slavefifo-si5351-clk.img  fvtest-slavefifo.img  klock.c  klock.h  stream.c  stream.h  streaming-client.c  usb.c  usb.h
fvtest-dual-adc/: elf2img  fvtest-dual-adc-usbdscr.c  fvtest-dual-adc.c  fvtest-dual-adc.elf  fvtest-dual-adc.h  fvtest-dual-adc.map  makefile
fvtest-dual-adc/fvtest-dual-adc.cydsn/: fvtest-dual-adc.cyfx
fvtest-single-adc/: cyfxgpif2config.h  fvtest-single-adc-usbdscr.c  fvtest-single-adc.c  fvtest-single-adc.elf  fvtest-single-adc.h  fvtest-single-adc.img  fvtest-single-adc.map  makefile
fvtest-single-adc/fvtest-single-adc.cydsn/: fvtest-single-adc.cyfx
fvtest-slavefifo/: cyfxgpif2config.h  fvtest-slavefifo.c  fvtest-slavefifo.h  fvtest-slavefifodscr.c  makefile
fvtest-slavefifo-si5351-clk/: fvtest-slavefifo-si5351-clk.c  fvtest-slavefifo-si5351-clk.h  fvtest-slavefifo-si5351-clkdscr.c  makefile
fvtest-slavefifo-si5351-clk/fvtest-slavefifo-clk-in.cydsn/: cyfxgpif2config.h  fvtest-slavefifo.cyfx
fvtest-slavefifo/fvtest-slavefifo.cydsn/: fvtest-slavefifo.cyfx
fx3-firmware/: app.c  app.h  cyfxgpif2config-dac-ext-clock.h  cyfxgpif2config-dac-fx3-clock.h  cyfxgpif2config-dac.h.orig  cyfxgpif2config-dual-adc.h  cyfxgpif2config-single-adc-fx3-clock.h  cyfxgpif2config-single-adc.h  dfc_modes.c  dfc_modes.h  fx3-firmware.img  gpif.c  gpif.h  gpio.c  gpio.h  i2c.c  i2c.h  makefile  si5351.c  si5351.h  uart.c  uart.h  usb.c  usb.h  usbdscr.c
linux/: CMakeLists.txt  Makefile  dfc.h  fvtest-dual-adc.img  klock.c  stream.c  stream.h  streaming-client.c  usb.c
signal-generator-linux/: CMakeLists.txt  Makefile  signal-generator.c
signal-generator-windows/: CMakeLists.txt  README.md  signal-generator.cpp
streaming-client-linux/: CMakeLists.txt  clock.c  clock.h  dfc.c  dfc.h  stream.c  stream.h  streaming-client.c  types.h  usb.c  usb.h
streaming-client-windows/: CMakeLists.txt  README.md  getopt.h  streaming-client.cpp
utils/: gaussian_fit.py
windows/: README.md  getopt.c  streaming-client.cpp
(+70 files in other folders)
